# sensor_config

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
include/sensor_config/: camera_models_kalibr.h  open_camera_to_rosmsg.h
include/sensor_config/apriltag_model/: tag_extrin_model.h
include/sensor_config/camera_model/: camera.h  pinhole_camera.h  pinhole_full_camera.h
include/sensor_config/imu_driver/: serial_device.h  serial_protocol.h
include/sensor_config/imu_model/: imu.h
include/sensor_config/modules/: stereo_cam_config_manager.h  stereo_imu_config.h  stereo_rectifier.h
include/sensor_config/modules/imu_driver/: imu_protocol.h  serial_protocol.h
include/sensor_config/modules/imu_filter/: one_order_low_pass.h
include/sensor_config/tools/: tp_checker.h
launch/: open_camera_split_imu.launch  publish_params_tp_tf.launch  record_odom.launch  undistort_stereo.launch
scripts/: 4_tips_fov.py  check_tp.py  kalibr_usage.sh  start_image_imu.sh
src/: camera_models_kalibr.cc
src/camera_model/: camera.cc  pinhole_camera.cc
src/imu_model/: imu.cc
src/modules/: camera_models_kalibr.cc  stereo_cam_config_manager.cc  stereo_imu_config.cc  stereo_rectifier.cc
src/modules/imu_driver/: imu_protocol.c  serial_device.c  serial_protocol.c
src/test/: fake_imu.cc  test_extreme_ros_time.cc
src/tools/: convert_kalibr_to_vins_param.cc  imu_filter.cc  open_camera_imu_to_rosmsg.cc  open_camera_spilt_imu_to_rosmsg.cc  open_camera_split_imu_to_rosmsg.cc  open_camera_split_imu_to_rosmsg_ros_time.cc  open_camera_split_imu_to_rosmsg_v4l2.cc  open_camera_to_rosmsg.cc  open_imu.cc  preview_rosimage.cc  publish_params_tp_tf.cc  record_start_end_odom.cc  save_rosimg_to_file.cc  split_hconcate_image.cc  tp_checker.cc  undistort_img.cc  undistort_stereo.cc
